compiler_files/parser.output
Terminals unused in grammar

    "."
    UNKNOWN
    STRING_LITERAL


Grammar

    0 $accept: program YYEOF

    1 program: classes mainClass classes YYEOF

    2 mainClass: "class" "Main" "{" "void" "main" "(" ")" "{" statements "}" "}" optionalSemicolons

    3 classes: classes classDef
    4        | %empty

    5 classDef: "class" IDENTIFIER "{" functions "}" optionalSemicolons

    6 optionalSemicolons: optionalSemicolons ";"
    7                   | %empty

    8 accessSpecifiers: "public" ':'
    9                 | "private" ':'
   10                 | "protected" ':'
   11                 | %empty

   12 functions: functions accessSpecifiers function
   13          | %empty

   14 function: IDENTIFIER IDENTIFIER "(" arguments ")" "{" statements "}"

   15 arguments: argumentList
   16          | %empty

   17 argumentList: IDENTIFIER IDENTIFIER
   18             | argumentList "," IDENTIFIER IDENTIFIER

   19 statements: statements statement
   20           | %empty

   21 statement: declaration
   22          | expression ";"
   23          | "return" expression ";"
   24          | "return" ";"
   25          | ";"

   26 declaration: IDENTIFIER IDENTIFIER init moreDeclarations ";"

   27 init: "=" expression
   28     | %empty

   29 moreDeclarations: moreDeclarations "," IDENTIFIER init
   30                 | %empty

   31 expression: expression "+" expression
   32           | expression "-" expression
   33           | expression "*" expression
   34           | expression "/" expression
   35           | expression "%" expression
   36           | expression "|" expression
   37           | expression "&" expression
   38           | expression ">" expression
   39           | expression "<" expression
   40           | expression "^" expression
   41           | expression "<<" expression
   42           | expression ">>" expression
   43           | expression "||" expression
   44           | expression "&&" expression
   45           | expression ">=" expression
   46           | expression "<=" expression
   47           | expression "==" expression
   48           | expression "!=" expression
   49           | "+" expression
   50           | "-" expression
   51           | "!" expression
   52           | "~" expression
   53           | "*" IDENTIFIER
   54           | "&" IDENTIFIER
   55           | "++" IDENTIFIER
   56           | "--" IDENTIFIER
   57           | IDENTIFIER "++"
   58           | IDENTIFIER "--"
   59           | IDENTIFIER "=" expression
   60           | IDENTIFIER "+=" expression
   61           | IDENTIFIER "-=" expression
   62           | IDENTIFIER "*=" expression
   63           | IDENTIFIER "/=" expression
   64           | IDENTIFIER "%=" expression
   65           | IDENTIFIER "&=" expression
   66           | IDENTIFIER "|=" expression
   67           | IDENTIFIER "^=" expression
   68           | IDENTIFIER "<<=" expression
   69           | IDENTIFIER ">>=" expression
   70           | "(" expression ")"
   71           | IDENTIFIER
   72           | INTEGER_LITERAL
   73           | FLOATING_LITERAL


Terminals, with rules where they appear

    YYEOF (0) 0 1
    ':' (58) 8 9 10
    error (256)
    "class" (258) 2 5
    "Main" (259) 2
    "main" (260) 2
    "void" (261) 2
    "return" (262) 23 24
    "public" (263) 8
    "protected" (264) 10
    "private" (265) 9
    "{" (266) 2 5 14
    "}" (267) 2 5 14
    "(" (268) 2 14 70
    ")" (269) 2 14 70
    "." (270)
    ";" (271) 6 22 23 24 25 26
    "," (272) 18 29
    UNKNOWN (273)
    "+" (274) 31 49
    "-" (275) 32 50
    "*" (276) 33 53
    "/" (277) 34
    "%" (278) 35
    "++" (279) 55 57
    "--" (280) 56 58
    ">" (281) 38
    "<" (282) 39
    ">=" (283) 45
    "<=" (284) 46
    "==" (285) 47
    "!=" (286) 48
    "||" (287) 43
    "&&" (288) 44
    "!" (289) 51
    "|" (290) 36
    "&" (291) 37 54
    "^" (292) 40
    "~" (293) 52
    "<<" (294) 41
    ">>" (295) 42
    "=" (296) 27 59
    "+=" (297) 60
    "-=" (298) 61
    "*=" (299) 62
    "/=" (300) 63
    "%=" (301) 64
    "&=" (302) 65
    "|=" (303) 66
    "^=" (304) 67
    "<<=" (305) 68
    ">>=" (306) 69
    INTEGER_LITERAL <int> (307) 72
    FLOATING_LITERAL <double> (308) 73
    STRING_LITERAL <string> (309)
    IDENTIFIER <string> (310) 5 14 17 18 26 29 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 71
    UMINUS (311)
    UPLUS (312)
    ADDRESS_OF (313)
    DEREFERENCE (314)
    PRE_INCREMENT (315)
    PRE_DECREMENT (316)
    POST_INCREMENT (317)
    POST_DECREMENT (318)


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    program (66)
        on left: 1
        on right: 0
    mainClass (67)
        on left: 2
        on right: 1
    classes (68)
        on left: 3 4
        on right: 1 3
    classDef (69)
        on left: 5
        on right: 3
    optionalSemicolons (70)
        on left: 6 7
        on right: 2 5 6
    accessSpecifiers (71)
        on left: 8 9 10 11
        on right: 12
    functions (72)
        on left: 12 13
        on right: 5 12
    function (73)
        on left: 14
        on right: 12
    arguments (74)
        on left: 15 16
        on right: 14
    argumentList (75)
        on left: 17 18
        on right: 15 18
    statements (76)
        on left: 19 20
        on right: 2 14 19
    statement (77)
        on left: 21 22 23 24 25
        on right: 19
    declaration (78)
        on left: 26
        on right: 21
    init (79)
        on left: 27 28
        on right: 26 29
    moreDeclarations (80)
        on left: 29 30
        on right: 26 29
    expression (81)
        on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 22 23 27 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 59 60 61 62 63 64 65 66 67 68 69 70


State 0

    0 $accept: . program YYEOF

    $default  reduce using rule 4 (classes)

    program  go to state 1
    classes  go to state 2


State 1

    0 $accept: program . YYEOF

    YYEOF  shift, and go to state 3


State 2

    1 program: classes . mainClass classes YYEOF
    3 classes: classes . classDef

    "class"  shift, and go to state 4

    mainClass  go to state 5
    classDef   go to state 6


State 3

    0 $accept: program YYEOF .

    $default  accept


State 4

    2 mainClass: "class" . "Main" "{" "void" "main" "(" ")" "{" statements "}" "}" optionalSemicolons
    5 classDef: "class" . IDENTIFIER "{" functions "}" optionalSemicolons

    "Main"      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8


State 5

    1 program: classes mainClass . classes YYEOF

    $default  reduce using rule 4 (classes)

    classes  go to state 9


State 6

    3 classes: classes classDef .

    $default  reduce using rule 3 (classes)


State 7

    2 mainClass: "class" "Main" . "{" "void" "main" "(" ")" "{" statements "}" "}" optionalSemicolons

    "{"  shift, and go to state 10


State 8

    5 classDef: "class" IDENTIFIER . "{" functions "}" optionalSemicolons

    "{"  shift, and go to state 11


State 9

    1 program: classes mainClass classes . YYEOF
    3 classes: classes . classDef

    YYEOF    shift, and go to state 12
    "class"  shift, and go to state 13

    classDef  go to state 6


State 10

    2 mainClass: "class" "Main" "{" . "void" "main" "(" ")" "{" statements "}" "}" optionalSemicolons

    "void"  shift, and go to state 14


State 11

    5 classDef: "class" IDENTIFIER "{" . functions "}" optionalSemicolons

    $default  reduce using rule 13 (functions)

    functions  go to state 15


State 12

    1 program: classes mainClass classes YYEOF .

    $default  reduce using rule 1 (program)


State 13

    5 classDef: "class" . IDENTIFIER "{" functions "}" optionalSemicolons

    IDENTIFIER  shift, and go to state 8


State 14

    2 mainClass: "class" "Main" "{" "void" . "main" "(" ")" "{" statements "}" "}" optionalSemicolons

    "main"  shift, and go to state 16


State 15

    5 classDef: "class" IDENTIFIER "{" functions . "}" optionalSemicolons
   12 functions: functions . accessSpecifiers function

    "public"     shift, and go to state 17
    "protected"  shift, and go to state 18
    "private"    shift, and go to state 19
    "}"          shift, and go to state 20

    $default  reduce using rule 11 (accessSpecifiers)

    accessSpecifiers  go to state 21


State 16

    2 mainClass: "class" "Main" "{" "void" "main" . "(" ")" "{" statements "}" "}" optionalSemicolons

    "("  shift, and go to state 22


State 17

    8 accessSpecifiers: "public" . ':'

    ':'  shift, and go to state 23


State 18

   10 accessSpecifiers: "protected" . ':'

    ':'  shift, and go to state 24


State 19

    9 accessSpecifiers: "private" . ':'

    ':'  shift, and go to state 25


State 20

    5 classDef: "class" IDENTIFIER "{" functions "}" . optionalSemicolons

    $default  reduce using rule 7 (optionalSemicolons)

    optionalSemicolons  go to state 26


State 21

   12 functions: functions accessSpecifiers . function

    IDENTIFIER  shift, and go to state 27

    function  go to state 28


State 22

    2 mainClass: "class" "Main" "{" "void" "main" "(" . ")" "{" statements "}" "}" optionalSemicolons

    ")"  shift, and go to state 29


State 23

    8 accessSpecifiers: "public" ':' .

    $default  reduce using rule 8 (accessSpecifiers)


State 24

   10 accessSpecifiers: "protected" ':' .

    $default  reduce using rule 10 (accessSpecifiers)


State 25

    9 accessSpecifiers: "private" ':' .

    $default  reduce using rule 9 (accessSpecifiers)


State 26

    5 classDef: "class" IDENTIFIER "{" functions "}" optionalSemicolons .
    6 optionalSemicolons: optionalSemicolons . ";"

    ";"  shift, and go to state 30

    $default  reduce using rule 5 (classDef)


State 27

   14 function: IDENTIFIER . IDENTIFIER "(" arguments ")" "{" statements "}"

    IDENTIFIER  shift, and go to state 31


State 28

   12 functions: functions accessSpecifiers function .

    $default  reduce using rule 12 (functions)


State 29

    2 mainClass: "class" "Main" "{" "void" "main" "(" ")" . "{" statements "}" "}" optionalSemicolons

    "{"  shift, and go to state 32


State 30

    6 optionalSemicolons: optionalSemicolons ";" .

    $default  reduce using rule 6 (optionalSemicolons)


State 31

   14 function: IDENTIFIER IDENTIFIER . "(" arguments ")" "{" statements "}"

    "("  shift, and go to state 33


State 32

    2 mainClass: "class" "Main" "{" "void" "main" "(" ")" "{" . statements "}" "}" optionalSemicolons

    $default  reduce using rule 20 (statements)

    statements  go to state 34


State 33

   14 function: IDENTIFIER IDENTIFIER "(" . arguments ")" "{" statements "}"

    IDENTIFIER  shift, and go to state 35

    $default  reduce using rule 16 (arguments)

    arguments     go to state 36
    argumentList  go to state 37


State 34

    2 mainClass: "class" "Main" "{" "void" "main" "(" ")" "{" statements . "}" "}" optionalSemicolons
   19 statements: statements . statement

    "return"          shift, and go to state 38
    "}"               shift, and go to state 39
    "("               shift, and go to state 40
    ";"               shift, and go to state 41
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 52

    statement    go to state 53
    declaration  go to state 54
    expression   go to state 55


State 35

   17 argumentList: IDENTIFIER . IDENTIFIER

    IDENTIFIER  shift, and go to state 56


State 36

   14 function: IDENTIFIER IDENTIFIER "(" arguments . ")" "{" statements "}"

    ")"  shift, and go to state 57


State 37

   15 arguments: argumentList .
   18 argumentList: argumentList . "," IDENTIFIER IDENTIFIER

    ","  shift, and go to state 58

    $default  reduce using rule 15 (arguments)


State 38

   23 statement: "return" . expression ";"
   24          | "return" . ";"

    "("               shift, and go to state 40
    ";"               shift, and go to state 59
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 61


State 39

    2 mainClass: "class" "Main" "{" "void" "main" "(" ")" "{" statements "}" . "}" optionalSemicolons

    "}"  shift, and go to state 62


State 40

   70 expression: "(" . expression ")"

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 63


State 41

   25 statement: ";" .

    $default  reduce using rule 25 (statement)


State 42

   49 expression: "+" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 64


State 43

   50 expression: "-" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 65


State 44

   53 expression: "*" . IDENTIFIER

    IDENTIFIER  shift, and go to state 66


State 45

   55 expression: "++" . IDENTIFIER

    IDENTIFIER  shift, and go to state 67


State 46

   56 expression: "--" . IDENTIFIER

    IDENTIFIER  shift, and go to state 68


State 47

   51 expression: "!" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 69


State 48

   54 expression: "&" . IDENTIFIER

    IDENTIFIER  shift, and go to state 70


State 49

   52 expression: "~" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 71


State 50

   72 expression: INTEGER_LITERAL .

    $default  reduce using rule 72 (expression)


State 51

   73 expression: FLOATING_LITERAL .

    $default  reduce using rule 73 (expression)


State 52

   26 declaration: IDENTIFIER . IDENTIFIER init moreDeclarations ";"
   57 expression: IDENTIFIER . "++"
   58           | IDENTIFIER . "--"
   59           | IDENTIFIER . "=" expression
   60           | IDENTIFIER . "+=" expression
   61           | IDENTIFIER . "-=" expression
   62           | IDENTIFIER . "*=" expression
   63           | IDENTIFIER . "/=" expression
   64           | IDENTIFIER . "%=" expression
   65           | IDENTIFIER . "&=" expression
   66           | IDENTIFIER . "|=" expression
   67           | IDENTIFIER . "^=" expression
   68           | IDENTIFIER . "<<=" expression
   69           | IDENTIFIER . ">>=" expression
   71           | IDENTIFIER .

    "++"        shift, and go to state 72
    "--"        shift, and go to state 73
    "="         shift, and go to state 74
    "+="        shift, and go to state 75
    "-="        shift, and go to state 76
    "*="        shift, and go to state 77
    "/="        shift, and go to state 78
    "%="        shift, and go to state 79
    "&="        shift, and go to state 80
    "|="        shift, and go to state 81
    "^="        shift, and go to state 82
    "<<="       shift, and go to state 83
    ">>="       shift, and go to state 84
    IDENTIFIER  shift, and go to state 85

    $default  reduce using rule 71 (expression)


State 53

   19 statements: statements statement .

    $default  reduce using rule 19 (statements)


State 54

   21 statement: declaration .

    $default  reduce using rule 21 (statement)


State 55

   22 statement: expression . ";"
   31 expression: expression . "+" expression
   32           | expression . "-" expression
   33           | expression . "*" expression
   34           | expression . "/" expression
   35           | expression . "%" expression
   36           | expression . "|" expression
   37           | expression . "&" expression
   38           | expression . ">" expression
   39           | expression . "<" expression
   40           | expression . "^" expression
   41           | expression . "<<" expression
   42           | expression . ">>" expression
   43           | expression . "||" expression
   44           | expression . "&&" expression
   45           | expression . ">=" expression
   46           | expression . "<=" expression
   47           | expression . "==" expression
   48           | expression . "!=" expression

    ";"   shift, and go to state 86
    "+"   shift, and go to state 87
    "-"   shift, and go to state 88
    "*"   shift, and go to state 89
    "/"   shift, and go to state 90
    "%"   shift, and go to state 91
    ">"   shift, and go to state 92
    "<"   shift, and go to state 93
    ">="  shift, and go to state 94
    "<="  shift, and go to state 95
    "=="  shift, and go to state 96
    "!="  shift, and go to state 97
    "||"  shift, and go to state 98
    "&&"  shift, and go to state 99
    "|"   shift, and go to state 100
    "&"   shift, and go to state 101
    "^"   shift, and go to state 102
    "<<"  shift, and go to state 103
    ">>"  shift, and go to state 104


State 56

   17 argumentList: IDENTIFIER IDENTIFIER .

    $default  reduce using rule 17 (argumentList)


State 57

   14 function: IDENTIFIER IDENTIFIER "(" arguments ")" . "{" statements "}"

    "{"  shift, and go to state 105


State 58

   18 argumentList: argumentList "," . IDENTIFIER IDENTIFIER

    IDENTIFIER  shift, and go to state 106


State 59

   24 statement: "return" ";" .

    $default  reduce using rule 24 (statement)


State 60

   57 expression: IDENTIFIER . "++"
   58           | IDENTIFIER . "--"
   59           | IDENTIFIER . "=" expression
   60           | IDENTIFIER . "+=" expression
   61           | IDENTIFIER . "-=" expression
   62           | IDENTIFIER . "*=" expression
   63           | IDENTIFIER . "/=" expression
   64           | IDENTIFIER . "%=" expression
   65           | IDENTIFIER . "&=" expression
   66           | IDENTIFIER . "|=" expression
   67           | IDENTIFIER . "^=" expression
   68           | IDENTIFIER . "<<=" expression
   69           | IDENTIFIER . ">>=" expression
   71           | IDENTIFIER .

    "++"   shift, and go to state 72
    "--"   shift, and go to state 73
    "="    shift, and go to state 74
    "+="   shift, and go to state 75
    "-="   shift, and go to state 76
    "*="   shift, and go to state 77
    "/="   shift, and go to state 78
    "%="   shift, and go to state 79
    "&="   shift, and go to state 80
    "|="   shift, and go to state 81
    "^="   shift, and go to state 82
    "<<="  shift, and go to state 83
    ">>="  shift, and go to state 84

    $default  reduce using rule 71 (expression)


State 61

   23 statement: "return" expression . ";"
   31 expression: expression . "+" expression
   32           | expression . "-" expression
   33           | expression . "*" expression
   34           | expression . "/" expression
   35           | expression . "%" expression
   36           | expression . "|" expression
   37           | expression . "&" expression
   38           | expression . ">" expression
   39           | expression . "<" expression
   40           | expression . "^" expression
   41           | expression . "<<" expression
   42           | expression . ">>" expression
   43           | expression . "||" expression
   44           | expression . "&&" expression
   45           | expression . ">=" expression
   46           | expression . "<=" expression
   47           | expression . "==" expression
   48           | expression . "!=" expression

    ";"   shift, and go to state 107
    "+"   shift, and go to state 87
    "-"   shift, and go to state 88
    "*"   shift, and go to state 89
    "/"   shift, and go to state 90
    "%"   shift, and go to state 91
    ">"   shift, and go to state 92
    "<"   shift, and go to state 93
    ">="  shift, and go to state 94
    "<="  shift, and go to state 95
    "=="  shift, and go to state 96
    "!="  shift, and go to state 97
    "||"  shift, and go to state 98
    "&&"  shift, and go to state 99
    "|"   shift, and go to state 100
    "&"   shift, and go to state 101
    "^"   shift, and go to state 102
    "<<"  shift, and go to state 103
    ">>"  shift, and go to state 104


State 62

    2 mainClass: "class" "Main" "{" "void" "main" "(" ")" "{" statements "}" "}" . optionalSemicolons

    $default  reduce using rule 7 (optionalSemicolons)

    optionalSemicolons  go to state 108


State 63

   31 expression: expression . "+" expression
   32           | expression . "-" expression
   33           | expression . "*" expression
   34           | expression . "/" expression
   35           | expression . "%" expression
   36           | expression . "|" expression
   37           | expression . "&" expression
   38           | expression . ">" expression
   39           | expression . "<" expression
   40           | expression . "^" expression
   41           | expression . "<<" expression
   42           | expression . ">>" expression
   43           | expression . "||" expression
   44           | expression . "&&" expression
   45           | expression . ">=" expression
   46           | expression . "<=" expression
   47           | expression . "==" expression
   48           | expression . "!=" expression
   70           | "(" expression . ")"

    ")"   shift, and go to state 109
    "+"   shift, and go to state 87
    "-"   shift, and go to state 88
    "*"   shift, and go to state 89
    "/"   shift, and go to state 90
    "%"   shift, and go to state 91
    ">"   shift, and go to state 92
    "<"   shift, and go to state 93
    ">="  shift, and go to state 94
    "<="  shift, and go to state 95
    "=="  shift, and go to state 96
    "!="  shift, and go to state 97
    "||"  shift, and go to state 98
    "&&"  shift, and go to state 99
    "|"   shift, and go to state 100
    "&"   shift, and go to state 101
    "^"   shift, and go to state 102
    "<<"  shift, and go to state 103
    ">>"  shift, and go to state 104


State 64

   31 expression: expression . "+" expression
   32           | expression . "-" expression
   33           | expression . "*" expression
   34           | expression . "/" expression
   35           | expression . "%" expression
   36           | expression . "|" expression
   37           | expression . "&" expression
   38           | expression . ">" expression
   39           | expression . "<" expression
   40           | expression . "^" expression
   41           | expression . "<<" expression
   42           | expression . ">>" expression
   43           | expression . "||" expression
   44           | expression . "&&" expression
   45           | expression . ">=" expression
   46           | expression . "<=" expression
   47           | expression . "==" expression
   48           | expression . "!=" expression
   49           | "+" expression .

    $default  reduce using rule 49 (expression)


State 65

   31 expression: expression . "+" expression
   32           | expression . "-" expression
   33           | expression . "*" expression
   34           | expression . "/" expression
   35           | expression . "%" expression
   36           | expression . "|" expression
   37           | expression . "&" expression
   38           | expression . ">" expression
   39           | expression . "<" expression
   40           | expression . "^" expression
   41           | expression . "<<" expression
   42           | expression . ">>" expression
   43           | expression . "||" expression
   44           | expression . "&&" expression
   45           | expression . ">=" expression
   46           | expression . "<=" expression
   47           | expression . "==" expression
   48           | expression . "!=" expression
   50           | "-" expression .

    $default  reduce using rule 50 (expression)


State 66

   53 expression: "*" IDENTIFIER .

    $default  reduce using rule 53 (expression)


State 67

   55 expression: "++" IDENTIFIER .

    $default  reduce using rule 55 (expression)


State 68

   56 expression: "--" IDENTIFIER .

    $default  reduce using rule 56 (expression)


State 69

   31 expression: expression . "+" expression
   32           | expression . "-" expression
   33           | expression . "*" expression
   34           | expression . "/" expression
   35           | expression . "%" expression
   36           | expression . "|" expression
   37           | expression . "&" expression
   38           | expression . ">" expression
   39           | expression . "<" expression
   40           | expression . "^" expression
   41           | expression . "<<" expression
   42           | expression . ">>" expression
   43           | expression . "||" expression
   44           | expression . "&&" expression
   45           | expression . ">=" expression
   46           | expression . "<=" expression
   47           | expression . "==" expression
   48           | expression . "!=" expression
   51           | "!" expression .

    $default  reduce using rule 51 (expression)


State 70

   54 expression: "&" IDENTIFIER .

    $default  reduce using rule 54 (expression)


State 71

   31 expression: expression . "+" expression
   32           | expression . "-" expression
   33           | expression . "*" expression
   34           | expression . "/" expression
   35           | expression . "%" expression
   36           | expression . "|" expression
   37           | expression . "&" expression
   38           | expression . ">" expression
   39           | expression . "<" expression
   40           | expression . "^" expression
   41           | expression . "<<" expression
   42           | expression . ">>" expression
   43           | expression . "||" expression
   44           | expression . "&&" expression
   45           | expression . ">=" expression
   46           | expression . "<=" expression
   47           | expression . "==" expression
   48           | expression . "!=" expression
   52           | "~" expression .

    $default  reduce using rule 52 (expression)


State 72

   57 expression: IDENTIFIER "++" .

    $default  reduce using rule 57 (expression)


State 73

   58 expression: IDENTIFIER "--" .

    $default  reduce using rule 58 (expression)


State 74

   59 expression: IDENTIFIER "=" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 110


State 75

   60 expression: IDENTIFIER "+=" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 111


State 76

   61 expression: IDENTIFIER "-=" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 112


State 77

   62 expression: IDENTIFIER "*=" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 113


State 78

   63 expression: IDENTIFIER "/=" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 114


State 79

   64 expression: IDENTIFIER "%=" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 115


State 80

   65 expression: IDENTIFIER "&=" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 116


State 81

   66 expression: IDENTIFIER "|=" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 117


State 82

   67 expression: IDENTIFIER "^=" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 118


State 83

   68 expression: IDENTIFIER "<<=" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 119


State 84

   69 expression: IDENTIFIER ">>=" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 120


State 85

   26 declaration: IDENTIFIER IDENTIFIER . init moreDeclarations ";"

    "="  shift, and go to state 121

    $default  reduce using rule 28 (init)

    init  go to state 122


State 86

   22 statement: expression ";" .

    $default  reduce using rule 22 (statement)


State 87

   31 expression: expression "+" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 123


State 88

   32 expression: expression "-" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 124


State 89

   33 expression: expression "*" . expression

    "("               shift, and go to state 40
    "+"               shift, and go to state 42
    "-"               shift, and go to state 43
    "*"               shift, and go to state 44
    "++"              shift, and go to state 45
    "--"              shift, and go to state 46
    "!"               shift, and go to state 47
    "&"               shift, and go to state 48
    "~"               shift, and go to state 49
    INTEGER_LITERAL   shift, and go to state 50
    FLOATING_LITERAL  shift, and go to state 51
    IDENTIFIER        shift, and go to state 60

    expression  go to state 125


State 90

   34 expression: expression "/" . expression
